--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 .light-gray { 
-    background-color: lightgray;
+    background-color: #eaeaea;
 
 
 }
@@ -32,32 +32,27 @@ img {
     border-radius: 50%;
     margin-left: 10px;
     margin-top: 15px;
+    margin-bottom: 10px;
 
 }
+
 .float-right {
     float: right;
 }
-.float-left {
-    float: left;
-}
+
 .display-inline-block { 
     display: inline-block;
 }
 .mt-14 {
     margin-top: 14px;
 }
+
 i {
     margin: 5px;
-
-}
-.bell {
-    font-size: larger;
-    color : lightblue
-
 }
 
 .search {
-    width: 100%;
+    width: 81%;
 }
 
 .bg-grey {
@@ -67,4 +62,22 @@ i {
 .messaggio {
     width: 90%;
     float: right;
+}
+
+.centrato{
+    display: flex;
+    justify-content: flex-start;
+    background-color: #8edafc;
+}
+
+.bell-vertical{
+    display:flex;
+    align-items: center;
+}
+
+#bell{
+    background-color: white;
+    color: #8edafc;
+    border-radius: 50%;
+
 }
