--- a/css/style.css
+++ b/css/style.css
@@ -49,25 +49,33 @@ img {
 
 i {
     margin: 5px;
+    font-size: 25px;
+}
+
+.sfondo-silenzia{
+    background-color: #8edafc;
 }
 
 .search {
-    width: 81%;
+    width: 100%;
+    height: 40px;
 }
 
 .bg-grey {
-    background-color: grey;
+    background-color: #eaeaea;
 }
 
 .messaggio {
-    width: 90%;
-    float: right;
+    width: 80%;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 5px;
+    padding-left: 5px;
 }
 
 .centrato{
     display: flex;
     justify-content: flex-start;
-    background-color: #8edafc;
 }
 
 .bell-vertical{
@@ -80,4 +88,29 @@ i {
     color: #8edafc;
     border-radius: 50%;
 
+}
+
+#desktop{
+    color: gray;
+}
+
+.space{
+    display: flex;
+    justify-content: space-between;
+}
+
+#barra{
+    margin-top: 92%;
+    background-color: #f3eeea;
+    height: 32px;
+}
+
+.fa-face-smile, .fa-microphone{
+    color: #6b7376;
+}
+
+#sfondo{
+    z-index: 5;
+    height: 10%;
+    width: 100%;
 }
