--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,11 @@
 
 .light-gray { 
     background-color: #eaeaea;
-
-
 }
 
-.light-green {
+.sfondo {
 
-    background-color: lightgreen; ;
+    background-image: url('https://i.pinimg.com/736x/8f/87/1d/8f871db726cc745e7f19064655688335.jpg');
 }
 
 .p-0 {
@@ -100,7 +98,7 @@ i {
 }
 
 #barra{
-    margin-top: 648px;
+    margin-top: 632px;
     background-color: #f3eeea;
     height: 34px;
 }
@@ -141,4 +139,8 @@ i {
     padding: 10px;
     border-radius: 10px;
 
+}
+
+#container-conversazione{
+    padding-top: 15px;
 }
