--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 .vh-100 {
-
     height: 100vh;
     width: auto;
 }
@@ -15,8 +14,9 @@
 }
 
 .sfondo {
-
-    background-image: url('https://i.pinimg.com/736x/8f/87/1d/8f871db726cc745e7f19064655688335.jpg');
+    background-image: url('https://static.privatesportshop.com/img/p/2553889-7838514-thickbox.jpg');
+    background-repeat: no-repeat;
+    background-size: 880px 1000px;
 }
 
 .p-0 {
@@ -63,7 +63,7 @@ i {
     background-color: #eaeaea;
 }
 
-.messaggio {
+.scrivi-messaggio {
     width: 80%;
     margin-left: 20px;
     margin-right: 20px;
@@ -88,10 +88,6 @@ i {
 
 }
 
-#desktop{
-    color: gray;
-}
-
 .space{
     display: flex;
     justify-content: space-between;
@@ -105,12 +101,6 @@ i {
 
 .fa-face-smile, .fa-microphone{
     color: #6b7376;
-}
-
-.mw-50 {
-    background-color: rgb(255, 0, 0);
-    max-width: 50%;
-
 }
 
 .destro {
@@ -135,7 +125,7 @@ i {
 }
 
 .messaggio-ricevuto {
-    background-color: white;
+    background-color: lightgrey;
     padding: 10px;
     border-radius: 10px;
 
